[package]
name = "server"
version = "0.1.0"
authors = ["glepur <goran.lepur1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
mime_guess = "2.0.3"
rust-embed = "5.5.1"
